// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewCreatedPolicy expect to render without error 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    <h1
      class=""
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Review
    </h1>
    <p
      class=""
      data-ouia-component-id="OUIA-Generated-Text-2"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Review your SCAP policy before finishing.
    </p>
    <h3
      class=""
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
      style="margin-top: 0px;"
    >
      C2S for Red Hat Enterprise Linux 6
    </h3>
    <dl
      class=""
    >
      <dt
        class=""
      >
        Policy type
      </dt>
      <dd
        class=""
      >
        C2S for Red Hat Enterprise Linux 6
      </dd>
      <dt
        class=""
      >
        Compliance threshold
      </dt>
      <dd
        class=""
      >
        100%
      </dd>
      <dt
        class=""
      >
        Systems
      </dt>
      <dd
        class=""
      >
        <dl
          class=""
        >
          <dt
            class=""
            style="font-weight: normal;"
          >
            RHEL 7.7
          </dt>
          <dd
            class=""
          >
            <span
              class="pf-c-label pf-m-compact"
            >
              <span
                class="pf-c-label__content"
              >
                10 systems
              </span>
            </span>
          </dd>
          <dt
            class=""
            style="font-weight: normal;"
          >
            RHEL 7.5
          </dt>
          <dd
            class=""
          >
            <span
              class="pf-c-label pf-m-compact"
            >
              <span
                class="pf-c-label__content"
              >
                3 systems
              </span>
            </span>
          </dd>
        </dl>
      </dd>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`ReviewCreatedPolicy should render a spinner while loading 1`] = `
<DocumentFragment>
  <div
    class="pf-c-content"
  >
    <h1
      class=""
      data-ouia-component-id="OUIA-Generated-Text-4"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Review
    </h1>
    <p
      class=""
      data-ouia-component-id="OUIA-Generated-Text-5"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
    >
      Review your SCAP policy before finishing.
    </p>
    <h3
      class=""
      data-ouia-component-id="OUIA-Generated-Text-6"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe="true"
      data-pf-content="true"
      style="margin-top: 0px;"
    >
      C2S for Red Hat Enterprise Linux 6
    </h3>
    <dl
      class=""
    >
      <dt
        class=""
      >
        Policy type
      </dt>
      <dd
        class=""
      >
        C2S for Red Hat Enterprise Linux 6
      </dd>
      <dt
        class=""
      >
        Compliance threshold
      </dt>
      <dd
        class=""
      >
        100%
      </dd>
      <dt
        class=""
      >
        Systems
      </dt>
      <dd
        class=""
      >
        <dl
          class=""
        >
          <dt
            class=""
            style="font-weight: normal;"
          >
            RHEL 7.7
          </dt>
          <dd
            class=""
          >
            <span
              class="pf-c-label pf-m-compact"
            >
              <span
                class="pf-c-label__content"
              >
                10 systems
              </span>
            </span>
          </dd>
          <dt
            class=""
            style="font-weight: normal;"
          >
            RHEL 7.5
          </dt>
          <dd
            class=""
          >
            <span
              class="pf-c-label pf-m-compact"
            >
              <span
                class="pf-c-label__content"
              >
                3 systems
              </span>
            </span>
          </dd>
        </dl>
      </dd>
    </dl>
  </div>
</DocumentFragment>
`;
